<resources>
    <string name="app_name">Midterm</string>
    <string name="calculator">Calculator</string>
    <string name="to_do_list">To Do List</string>


    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="pn">+/-</string>
    <string name="per">%</string>
    <string name="div">÷</string>
    <string name="mul">×</string>
    <string name="min">-</string>
    <string name="add">+</string>
    <string name="eq">=</string>
    <string name="dot">.</string>
    <string name="path">()</string>

    <string name="backspace"></string>
    <string name="display">Enter a value</string>
</resources>